tests/ui/delegation/inner-attr.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/inner-attr.rs:6:16
   |
LL | reuse a as b { #![rustc_dummy] self }
   |                ^^^^^^^^^^^^^^^
LL |
LL | fn main() {}
   | ------------ the inner attribute doesn't annotate this function
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
help: to annotate the function, change the attribute from inner to outer style
   |
LL - reuse a as b { #![rustc_dummy] self }
LL + reuse a as b { #[rustc_dummy] self }
   |

error: aborting due to 1 previous error

